log/build_2023-11-06_20-33-24/turtlesim_color_change/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/rain/introTask/install/turtlesim_color_change/lib/python3.10/site-packages/turtlesim_color_change/change_background.py", line 43
    elif msg.x => 10.0:
               ^
SyntaxError: invalid syntax

